--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
           if (e) sum += e.OK + e.NDF;
         });
         const td = document.createElement('td');
-        td.textContent = `${sumOKNDf} / ${daysCount}`;
+        td.textContent = sum;
         td.classList.add('total-col');
         footerRow.appendChild(td);
       });
