--- a/index.html
+++ b/index.html
@@ -63,12 +63,8 @@
       font-size: 14px;
       white-space: nowrap;
     }
-    th {
-      background-color: #008080;
-      font-weight: bold;
-      position: sticky;
-      top: 0;
-      z-index: 1;
+    thead tr {
+    background-color: #215d5d !important;
     }
     td:first-child {
       background-color: #111;
