--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     thead tr {
     background-color: #215d5d !important;
     }
-    td:first-child {
+    tbody td:first-child {
       background-color: #111;
       font-weight: bold;
       text-align: left;
