--- a/index.html
+++ b/index.html
@@ -185,9 +185,9 @@
       const table = document.createElement('table');
       const thead = document.createElement('thead');
       const headerRow = document.createElement('tr');
-const firstHeader = document.createElement('th');
-firstHeader.textContent = '1'; // 
-headerRow.appendChild(firstHeader);
+const thIndex = document.createElement('th');
+thIndex.textContent = '1'; // ← добавляем текст "1"
+headerRow.appendChild(thIndex);
 
       diagonals.forEach(d => {
         const th = document.createElement('th');
