--- a/index.html
+++ b/index.html
@@ -57,16 +57,20 @@
       color: #fff;
     }
     th, td {
-      border: 1px solid #111;
+      border: 1px solid #555;
       padding: 8px 10px;
       text-align: center;
       font-size: 14px;
       white-space: nowrap;
     }
-    thead tr {
-    background-color: #215d5d !important;
+    th {
+      background-color: #008080;
+      font-weight: bold;
+      position: sticky;
+      top: 0;
+      z-index: 1;
     }
-    tbody td:first-child {
+    td:first-child {
       background-color: #111;
       font-weight: bold;
       text-align: left;
@@ -75,20 +79,17 @@
       z-index: 1;
     }
     th.total-col, td.total-col {
-      background-color: #111;
+      background-color: #005050;
       font-weight: bold;
     }
     th.extra-col, td.extra-col {
-      background-color: #005050;
+      background-color: #505050;
       font-weight: bold;
     }
     tfoot td {
       background-color: #005050;
       font-weight: bold;
     }
-    tbody tr:first-child td {
-  background-color: #215d5d !important;
-}
   </style>
 </head>
 <body>
@@ -121,7 +122,7 @@
 
     async function getData(sheetName) {
       try {
-        const response = await fetch(`https://sheets.googleapis.com/v4/spreadsheets/10W03bvKlVFlIUcxsHkzP_v_13gtnYRBmnrrO0ujB1bU/values/${encodeURIComponent(sheetName)}?key=AIzaSyCP7tzYiGwIZ6cymLAlv_9QgPIEshnRgqI`);
+        const response = await fetch(https://sheets.googleapis.com/v4/spreadsheets/10W03bvKlVFlIUcxsHkzP_v_13gtnYRBmnrrO0ujB1bU/values/${encodeURIComponent(sheetName)}?key=AIzaSyCP7tzYiGwIZ6cymLAlv_9QgPIEshnRgqI);
         const data = await response.json();
         return data.values || [];
       } catch {
@@ -185,10 +186,7 @@
       const table = document.createElement('table');
       const thead = document.createElement('thead');
       const headerRow = document.createElement('tr');
-const thIndex = document.createElement('th');
-thIndex.textContent = '1'; // ← добавляем текст "1"
-headerRow.appendChild(thIndex);
-
+      headerRow.appendChild(document.createElement('th'));
       diagonals.forEach(d => {
         const th = document.createElement('th');
         th.textContent = d;
@@ -290,7 +288,7 @@ headerRow.appendChild(thIndex);
       const now = new Date();
       for (let i = 0; i < 12; i++) {
         const date = new Date(now.getFullYear(), now.getMonth() - i, 1);
-        const value = `${date.getFullYear()}-${String(date.getMonth() + 1).padStart(2, '0')}`;
+        const value = ${date.getFullYear()}-${String(date.getMonth() + 1).padStart(2, '0')};
         const label = date.toLocaleDateString('pl-PL', { month: 'long', year: 'numeric' });
         const option = new Option(label.charAt(0).toUpperCase() + label.slice(1), value);
         select.appendChild(option);
